; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/firmware/carl9170fw/carlfw/src/extr_dma.c_fill_descriptor.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/firmware/carl9170fw/carlfw/src/extr_dma.c_fill_descriptor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dma_desc = type { i32*, i32*, %struct.dma_desc*, i64, i32, i64, i32 }

@AR9170_OWN_BITS_SW = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dma_desc*, i32, i32*)* @fill_descriptor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fill_descriptor(%struct.dma_desc* %0, i32 %1, i32* %2) #0 {
  %4 = alloca %struct.dma_desc*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  store %struct.dma_desc* %0, %struct.dma_desc** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32* %2, i32** %6, align 8
  %7 = load i32, i32* @AR9170_OWN_BITS_SW, align 4
  %8 = load %struct.dma_desc*, %struct.dma_desc** %4, align 8
  %9 = getelementptr inbounds %struct.dma_desc, %struct.dma_desc* %8, i32 0, i32 6
  store i32 %7, i32* %9, align 8
  %10 = load %struct.dma_desc*, %struct.dma_desc** %4, align 8
  %11 = getelementptr inbounds %struct.dma_desc, %struct.dma_desc* %10, i32 0, i32 5
  store i64 0, i64* %11, align 8
  %12 = load i32, i32* %5, align 4
  %13 = load %struct.dma_desc*, %struct.dma_desc** %4, align 8
  %14 = getelementptr inbounds %struct.dma_desc, %struct.dma_desc* %13, i32 0, i32 4
  store i32 %12, i32* %14, align 8
  %15 = load %struct.dma_desc*, %struct.dma_desc** %4, align 8
  %16 = getelementptr inbounds %struct.dma_desc, %struct.dma_desc* %15, i32 0, i32 3
  store i64 0, i64* %16, align 8
  %17 = load %struct.dma_desc*, %struct.dma_desc** %4, align 8
  %18 = load %struct.dma_desc*, %struct.dma_desc** %4, align 8
  %19 = getelementptr inbounds %struct.dma_desc, %struct.dma_desc* %18, i32 0, i32 2
  store %struct.dma_desc* %17, %struct.dma_desc** %19, align 8
  %20 = load i32*, i32** %6, align 8
  %21 = load %struct.dma_desc*, %struct.dma_desc** %4, align 8
  %22 = getelementptr inbounds %struct.dma_desc, %struct.dma_desc* %21, i32 0, i32 1
  store i32* %20, i32** %22, align 8
  %23 = load %struct.dma_desc*, %struct.dma_desc** %4, align 8
  %24 = getelementptr inbounds %struct.dma_desc, %struct.dma_desc* %23, i32 0, i32 0
  store i32* null, i32** %24, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
